examples/type_system/failing/60_public_hof_contract_unsupported.flx
// Historical fixture: strict mode now permits function-typed public boundaries.
public fn apply(f: (Int) -> Bool, x: Int) -> Bool {
    f(x)
}

fn is_positive(x: Int) -> Bool {
    x > 0
}

fn main() -> Unit {
    apply(is_positive, 1)
    None
}
